<resources>
    <string name="app_name">Pine</string>

    <!-- Main Screen -->
    <string name="main_fragment_app_bar_title">Pine</string>
    <string-array name="main_fragment_view_pager_tabs">
        <item>Feed</item>
        <item>Favorite</item>
    </string-array>

    <!-- Top Bar -->
    <string name="view_top_bar_content_description_app_logo">Application Logo</string>
    <string name="view_top_bar_content_description_search_button">Search Button</string>
    <string name="view_top_bar_content_description_profile_button">Profile Button</string>

    <!-- Search -->
    <string name="search_fragment_hint">Search</string>
    <string name="search_fragment_content_description_back_button">Back Button</string>
    <string name="search_fragment_content_description_clear_button">Clear Button</string>
    <string name="item_search_content_description_clock">Clock</string>

    <!-- Errors -->
    <string name="error_no_connection_title">No connection</string>
    <string name="error_no_connection_body">Check connection and try again</string>
    <string name="error_server_title">Server Error</string>
    <string name="error_server_body">Placeholder text for server error body</string>
    <string name="error_nothing_found_title">Nothing found</string>
    <string name="error_nothing_found_body">Change the keyword and try again</string>

    <!-- Snackbar -->
    <string name="snackbar_no_connection_title">No connection</string>
    <string name="snackbar_no_connection_action">Check connection and tap to repeat</string>

    <!-- Fullscreen -->
    <string name="fullscreen_image_fragment_content_description_image">Image</string>
    <string name="fullscreen_image_fragment_content_description_like">Like</string>
    <string name="fullscreen_image_fragment_share_via">Share via</string>
    <string name="fullscreen_image_fragment_content_description_back_button">Back Button</string>
    <string name="fullscreen_image_fragment_content_description_share_button">Share Button</string>
    <string name="fullscreen_image_fragment_content_description_download_button">Download Button</string>

    <!-- Feed -->
    <string name="feed_fragment_content_description_like">Like</string>

</resources>