<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/background_color"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageButton android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/view_top_bar_content_description_app_logo"
        android:src="@drawable/ic_logo_pine_24"
        app:tint="?colorPrimary" />

    <TextView android:id="@+id/app_name"
        style="@style/Title1B"
        android:includeFontPadding="false"
        android:textColor="@color/app_title_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        tools:text="Pine" />

    <ImageButton android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/view_top_bar_content_description_search_button"
        android:src="@drawable/ic_search"
        app:tint="?colorPrimary" />

    <ImageButton android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/view_top_bar_content_description_profile_button"
        android:src="@drawable/ic_profile"
        app:tint="?colorPrimary" />
</LinearLayout>
