<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout android:id="@+id/top_container"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/background_color"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:contentDescription="@string/search_fragment_content_description_back_button"
            android:src="@drawable/ic_back"
            app:tint="?colorPrimary" />

        <EditText android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_fragment_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColorHint="?colorPrimaryVariant" />

        <ImageButton android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@null"
            android:contentDescription="@string/search_fragment_content_description_clear_button"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:tint="?colorPrimary"
            tools:visibility="visible" />
    </LinearLayout>

    <include layout="@layout/view_feed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container" />

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/search_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:background="@android:color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_container"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_search" />

</androidx.constraintlayout.widget.ConstraintLayout>